--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<link>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Natalie Church's Personal Website</title>
+    <link rel="style.css"></link>
+    <style src="javascript.js"></style>
 </head>
 <body>
-    
+    <h1>Natalie Church</h1> 
+        <nav>
+            <a href="index.html" >Home</a>
+            <a href="about.html" >About</a>
+            <a href="portfolio.html" >Portfolio</a>
+        </nav>
 </body>
 </html>
