--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Natalie Church's Personal Website</title>
-    <link rel="style.css"></link>
+    <link rel="stylesheet" href="style.css"></link>
     <style src="javascript.js"></style>
 </head>
 <body>
@@ -14,5 +14,11 @@
             <a href="about.html" >About</a>
             <a href="portfolio.html" >Portfolio</a>
         </nav>
+    <section>
+        <h2>Developer & Naturalist</h2>
+        <h3>Inspired to help the world through coding and environmental education!</h3>
+        <img src="Image of Myself.jpg">
+        <p>"I believe that education is all about being excited about something. Seeing passion and enthusiasm helps push an educational message" ~ Steve Irwin</p>
+    </section>
 </body>
 </html>
