--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section>
         <h2>Developer & Naturalist</h2>
         <h3>Inspired to help the world through coding and environmental education!</h3>
-        <img src="Image of Myself.jpg">
+        <img src="Image of Myself.jpg" class="Selfie">
         <p>"I believe that education is all about being excited about something. Seeing passion and enthusiasm helps push an educational message" ~ Steve Irwin</p>
     </section>
 </body>
