--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
     <link rel="stylesheet" href="style.css"></link>
+    <script src="javascript.js"></script>
 </head>
     <h1>My passion for my work extends far beyond the professional realm!</h1>
         <h2>Nature Walks</h2>
