Added Portfolio details with images, styling, notes on future changes that need to be made, etc.

--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,47 @@
     <script src="javascript.js"></script>
 </head>
 <body>
-    
+    <h1> Projects I'm Passionate About!</h1>
+        <h2>Coding Project 1</h2>
+            <section>
+                <p>
+                    Add link to project, image of project
+                </p>
+                <p>
+                    Section for a coding project description
+                </p>
+            </section>
+        <h2>Coding Project 2</h2>
+            <section>
+                <p>
+                    Add link to project, image of project
+                </p>
+                <p>
+                    Section for a coding project description
+                </p>
+            </section>
+        <h2>Naturalist Programs</h2>
+            <section>
+                <img src="Photo with Latsch the Eagle for Program Project.jpeg" class="Latsch"> 
+                <p>
+                  Add link to powerpoint programs, maybe add images of slides (Eagles of the world one maybe?) 
+                  <div></div>
+                  Add a brief description of a few programs.
+                  <div></div>
+                  Made 7 unique programs about bald eagles, eagles around the world, migration, feathers, the Mississippi River, and variations of these tailored to step-on bus, river cruise, and on-site settings.
+                </p>
+            </section>
+        <h2>Critical Habitat Analysis</h2>
+            <>
+                <img src="CriticalHabitatAnalysis.png" class="SkunkMap">
+                <p>
+                    Add link to project?
+                </p>
+                <p>
+                    In this project, I researched and compiled historic data and present knowledge to create a critical habitat analysis for the eastern spotted skunk. The eastern spotted skunk has been experiencing population-wide decline since the mid-1900s, but they have yet to receive a comprehensive analysis of their current threats and an action plan to promote their survival. My intent was to begin that analysis by identifying their critical habitat in Iowa, ranking habitat suitability across the state, and creating a map in ArcGIS Pro of my findings.
+
+                </p>
+   
+            </section>
 </body>
 </html>
