--- a/about.html
+++ b/about.html
@@ -7,29 +7,34 @@
     <link rel="stylesheet" href="style.css"></link>
     <script src="javascript.js"></script>
 </head>
-    <h1>My passion for my work extends far beyond the professional realm!</h1>
-        <h2>Nature Walks</h2>
+<body class="AboutPageBody">
+    <h1 class="Abouth1">My passion for my work extends far beyond the professional realm!</h1>
+    <div class="AboutPageDivs">
+        <h2 class="Abouth2">Nature Walks</h2>
             <section>
                 <img src="Oregon Park Photo.jpg" class="AboutImageNatureWalks">
                 <p>
                     Edit text later: I love going on exciting adventures in nature. You might find me outside flipping rocks looking for bugs, smelling flowers, identifying trees, bird-watching, tromping through streams and fields, and tossing snowballs if the weather is right! Anytime I find something new or interesting, I'll always send photos and share with my friends, family, and anybody else who wants to hear!
                 </p>
             </section>
-        <h2>Volunteering</h2>
+    </div>
+    <div class="AboutPageDivs">
+        <h2 class="Abouth2">Volunteering</h2>
             <section>
-                <img src="Volunteering Zoo.jpg" class="AboutImageVolunteering">
+                <img src="Coalie.jpg" class="AboutImageVolunteering">
                 <p>
                     Edit text later: Free nature programs, playing cribbage, helping assisted living residents with their day-to-day tasks. History of volunteering at animal shelters, zoos, and fostering kittens at home.
                 </p>
             </section>
-        <h2>Video games</h2>
+    </div>
+    <div class="AboutPageDivs">
+        <h2 class="Abouth2">Video games</h2>
             <section>
-                <img src="VideoGameControllerIcon.png" class="AboutImageVideoGames">
+                <img src="VideoGameRazerMouse.png" class="AboutImageVideoGames">
                 <p>
                     Edit text later: Commonly play Hollow knight, animal crossing, stardew valley. I love almost all genres, and am excited to talk about them! The reason video games have such a spot in my heart is because they can be these amazing interactive works of art that inspire and educate in such a fun way! Some games that do this well include Roki (Help a girl rescue her brother while exploring a world rich with Scandinavian folklore!), Gris (Lead a young woman on a journey to reclaim her lost memories and find peace after loss), When the Past Was Around (Help a woman come to terms with loss and reclaim her passion for music), and Gibbon: Beyond the Trees (Wrestle with the reality of environmental degradation as you control a gibbon navigating your once peaceful habitat and the ruins it became).
                 </p>
             </section>
-<body>
-    
+    </div>
 </body>
 </html>
