Applied CSS styling to portfolio and index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="about.html" >About</a>
             <a href="portfolio.html" >Portfolio</a>
         </nav>
-    <section>
+    <section class="IndexSection">
         <h2>Developer & Naturalist</h2>
         <h3>Inspired to help the world through coding and environmental education!</h3>
         <img src="Image of Myself.jpg" class="Selfie">
