--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1> Projects I'm Passionate About!</h1>
+    <div class="PortfolioDivs">
         <h2>Coding Project 1</h2>
             <section>
                 <p>
@@ -18,6 +19,8 @@
                     Section for a coding project description
                 </p>
             </section>
+    </div>
+    <div class="PortfolioDivs">
         <h2>Coding Project 2</h2>
             <section>
                 <p>
@@ -27,18 +30,21 @@
                     Section for a coding project description
                 </p>
             </section>
+    </div>
+    <div class="PortfolioDivs">
         <h2>Naturalist Programs</h2>
             <section>
                 <img src="Photo with Latsch the Eagle for Program Project.jpeg" class="Latsch"> 
                 <p>
                   Add link to powerpoint programs, maybe add images of slides (Eagles of the world one maybe?) 
-                  <div></div>
                   Add a brief description of a few programs.
-                  <div></div>
                   Made 7 unique programs about bald eagles, eagles around the world, migration, feathers, the Mississippi River, and variations of these tailored to step-on bus, river cruise, and on-site settings.
                 </p>
             </section>
+    </div>
+    <div class="PortfolioDivs">
         <h2>Critical Habitat Analysis</h2>
+            <section>
                 <img src="CriticalHabitatAnalysis.png" class="SkunkMap">
                 <p>
                     Add link to project?
@@ -49,5 +55,6 @@
                 </p>
    
             </section>
+    </div>
 </body>
 </html>
